:zap: DefineClassHelper.java